--- a/Pantheon/src/app/landing/footer/footer.component.html
+++ b/Pantheon/src/app/landing/footer/footer.component.html
@@ -1,9 +1,11 @@
 <footer class="stripe-shadow flex row align-items-center">
     <h1>Pantheon</h1>
-    <ul class="flex row">
-        <li>instagram</li>
-        <li>whatsapp</li>
+    <ul class="flex row align-items-center">
         <li>legal</li>
         <li>terminos y condiciones</li>
+        <li ><a href="https://www.instagram.com" ><img src="../../../assets/instagram.png" alt=""></a></li>
+        <li ><a href="https://www.whatsapp.com" ><img src="../../../assets/whatsapp.png" alt=""></a></li>
+
+
     </ul>
 </footer>
