--- a/Pantheon/src/styles.less
+++ b/Pantheon/src/styles.less
@@ -16,6 +16,7 @@
     src: local('Laira Italic'), url('./assets/LairaItalic-MVo6n.woff') format('woff');
 }
 
+
 /* Variables */
 :root {
     --corner-radius: 4px;
@@ -42,6 +43,12 @@ body {
     place-items: center;
     font-family: inter;
 }
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
 button, input[type="submit"], input[type="reset"] {
 	background: none;
 	color: inherit;
@@ -62,7 +69,7 @@ ul, li {
 }
 
 .material-shadow {
-    box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
 h1 {
@@ -98,4 +105,6 @@ button {
 .align-items-center {
     align-items: center;
 }
+
+
 /** Mobile **/
