--- a/Pantheon/src/app/landing/footer/footer.component.less
+++ b/Pantheon/src/app/landing/footer/footer.component.less
@@ -6,4 +6,11 @@ footer {
 
 ul {
    margin-left: auto;
+   font-size: 12px;
+}
+ul li:not(:first-child) {
+   margin-left: 22px;
+}
+ul img{
+   width: 20px;
 }
