--- a/Pantheon/src/app/app.component.html
+++ b/Pantheon/src/app/app.component.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="appcontainer">
-        <app-landing></app-landing>
+        <router-outlet></router-outlet>
     </div>
 </body>
 </html>
