--- a/Pantheon/src/app/landing/landing.component.html
+++ b/Pantheon/src/app/landing/landing.component.html
@@ -9,7 +9,7 @@
             <h3>Inicio de Sesión</h3>
             <div class="userfield material-shadow"></div>
             <div class="passfield material-shadow"></div>
-            <button>Inicio</button>
+            <button><a href="/session">Inicio</a></button>
         </div>
 
     </div>
