--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
@@ -1,1 +1,13 @@
-<p>sessionheader works!</p>
+<div class="sessionheader">
+    <div class="header-container flex row stripe-shadow">
+        <ul class="useravatarinfo grid align-items-center justify-items-center">
+            <li><img src="../../../../assets/useravatar.png" alt=""></li>
+            <li>Nombre Apellido</li>
+            <li><span>Cargo</span></li>
+        </ul>
+        <ul class="sessioncrumb flex row align-items-center">
+            <li>01-01-2024 <br> 12:00:00</li>
+            <li class="sessionburger"></li>
+        </ul>
+    </div>
+</div>
