--- a/Pantheon/src/app/landing/landing.component.html
+++ b/Pantheon/src/app/landing/landing.component.html
@@ -9,9 +9,8 @@
             <h3>Inicio de Sesión</h3>
             <div class="userfield material-shadow"></div>
             <div class="passfield material-shadow"></div>
-            <button><a href="/session">Inicio</a></button>
+            <button><a routerLink="/session" RouterLinkActive>Inicio</a></button>
         </div>
-
     </div>
     <app-footer></app-footer>
 </div>
