--- a/Pantheon/src/styles.less
+++ b/Pantheon/src/styles.less
@@ -38,7 +38,7 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
     display: grid;
     place-items: center;
     font-family: inter;
@@ -88,6 +88,10 @@ button {
     
 }
 
+.grid {
+    display: grid;
+}
+
 .flex {
     display: flex;
 }
@@ -101,7 +105,9 @@ button {
 .justify-content-spbt {
     justify-content: space-between;
 }
-
+.justify-items-center {
+    justify-items: center;
+}
 .align-items-center {
     align-items: center;
 }
