min-advances mainsession

--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
@@ -1,1 +1,8 @@
-<p>you are in main session</p>
+<div class="main-body">
+<h1>Pantheon</h1>
+<ul class="main-services flex row">
+    <li class="main-setter">Ventas</li>
+    <li class="main-catalogue">Catalogo</li>
+    <li class="main-reports">Reportes</li>
+</ul>
+</div>
