--- a/Pantheon/src/app/divisions/session/session.component.html
+++ b/Pantheon/src/app/divisions/session/session.component.html
@@ -1,3 +1,4 @@
-<app-sessionheader></app-sessionheader>
-
-<app-mainsession></app-mainsession>
+<main>
+    <app-sessionheader></app-sessionheader>
+    <app-mainsession></app-mainsession>
+</main>
