--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
@@ -1,6 +1,6 @@
 <div class="sessionheader">
-    <div class="header-container flex row stripe-shadow">
-        <ul class="useravatarinfo grid align-items-center justify-items-center">
+    <div class="header-container flex row material-shadow">
+        <ul class="useravatarinfo grid">
             <li><img src="../../../../assets/useravatar.png" alt=""></li>
             <li>Nombre Apellido</li>
             <li><span>Cargo</span></li>
