--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
@@ -1,8 +1,16 @@
 <div class="main-body">
-<h1>Pantheon</h1>
-<ul class="main-services flex row">
-    <li class="main-setter">Ventas</li>
-    <li class="main-catalogue">Catalogo</li>
-    <li class="main-reports">Reportes</li>
-</ul>
+    <h1>Pantheon</h1>
+    <ul class="main-services flex row">
+        <li class="main-setter">Ventas</li>
+        <li class="main-catalogue">Catalogo</li>
+        <li class="main-reports">Reportes</li>
+    </ul>
+    <div class="session-dashboard stripe-shadow">
+        <h4>Actividad</h4>
+        <div class="plot"></div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab illum magnam ducimus mollitia minus ad dolorem rem voluptatum eius exercitationem in porro, facilis ipsa dolores, deserunt quibusdam iure aliquid maxime?</p>
+    </div>
+    <div class="session-dashboard session-recents">
+        <h4>Recientes</h4>
+    </div>
 </div>
