--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.less
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.less
@@ -2,13 +2,16 @@
     padding: 22px;
     text-align: left;
 }
-h1 {
+
+h1, h2, h3, h4 {
     text-align: left;
 }
+
 .main-services {
     margin-top: 22px;
     width: 100%;
 }
+
 .main-services > li {
     width: 100px;
     height: 32px;
@@ -17,17 +20,41 @@ h1 {
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
 }
+
 .main-services > li:not(:first-child) {
     margin-left: 12px;
 }
+
 .main-setter {
     background-color: blue;
     color: white;
 }
+
 .main-catalogue {
     background-color: orange;
 }
+
 .main-reports {
     background-color: green;
+}
+
+.session-dashboard {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(239, 239, 239);
+    margin-top: 22px;
+    padding: 8px;
+    border-radius: 4px;
+}
+
+.plot {
+    margin: 14px 0px;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    height: 120px;
+    border-radius: 4px;
 }
