--- a/Pantheon/src/styles.less
+++ b/Pantheon/src/styles.less
@@ -42,6 +42,7 @@ body {
     display: grid;
     place-items: center;
     font-family: inter;
+    font-size: 10px;
 }
 
 a, a:hover, a:focus, a:active {
@@ -76,8 +77,17 @@ h1 {
     font-family: Laira Regular;
     letter-spacing: 2px;
     text-align: center;
+    font-size: 3em;
 }
-
+h2 {
+    font-size: 2.4em;
+}
+h3 {
+    font-size: 2.1em;
+}
+h4 {
+    font-size: 1.5em;
+}
 h2, h3, h4 {
     font-family: inter;
     text-align: center;
@@ -85,7 +95,6 @@ h2, h3, h4 {
 
 button {
     padding: 4px 0px;
-    
 }
 
 .grid {
