--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
@@ -1,16 +1,35 @@
-<div class="main-body">
+<div class="main-body flex column">
     <h1>Pantheon</h1>
     <ul class="main-services flex row">
-        <li class="main-setter">Ventas</li>
+        <a  routerLink="setter"><li class="main-setter" >Ventas</li></a>
         <li class="main-catalogue">Catalogo</li>
         <li class="main-reports">Reportes</li>
+        <li class="main-route">Ruta</li>
     </ul>
-    <div class="session-dashboard stripe-shadow">
+    <div class="session-dashboard ">
         <h4>Actividad</h4>
         <div class="plot"></div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab illum magnam ducimus mollitia minus ad dolorem rem voluptatum eius exercitationem in porro, facilis ipsa dolores, deserunt quibusdam iure aliquid maxime?</p>
     </div>
-    <div class="session-dashboard session-recents">
+    <div class="session-recents">
         <h4>Recientes</h4>
+        <div class="recent-sheet-container ">
+            <ul class="recent-sheetlist">
+                <li>Cotizacion 1</li>
+                <li>Catalago 2</li>
+                <li>Reporte 3</li>
+                <li>Cotizacion 4</li>
+                <li>Cotizacion 5</li>
+                <li>Reporte 6</li>
+                <li>Catalogo 7</li>
+                <li>Cotizacion 8</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </div>
 </div>
