--- a/Pantheon/src/app/divisions/session/session.component.less
+++ b/Pantheon/src/app/divisions/session/session.component.less
@@ -1,6 +1,4 @@
-main {
-    width: 100%;
-    height: max-content;
-    min-height: 100vh;
-    background-color: white;
+
+app-mainsession {
+    flex: 1;
 }
