--- a/Pantheon/src/app/landing/landing.component.html
+++ b/Pantheon/src/app/landing/landing.component.html
@@ -6,10 +6,10 @@
             <img src="../../assets/pantheonlogo.png" alt="">
         </div>
         <div class="right flex column align-items-center">
-            <h3>Inicio de Sesión</h3>
+            <h3>Inicio de Sesion</h3>
             <div class="userfield material-shadow"></div>
             <div class="passfield material-shadow"></div>
-            <button><a routerLink="/session" RouterLinkActive>Inicio</a></button>
+            <button><a routerLink="session">Inicio</a></button>
         </div>
     </div>
     <app-footer></app-footer>
