--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.less
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.less
@@ -2,6 +2,9 @@
 .sessionheader {
     background-color: #1E1E1E ;
 }
+.blue {
+    background-color: blue;
+}
 .useravatarinfo {
     grid-template-columns: auto auto;
     column-gap: 12px;
