--- a/Pantheon/src/styles.less
+++ b/Pantheon/src/styles.less
@@ -120,6 +120,13 @@ button {
 .align-items-center {
     align-items: center;
 }
+main {
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
 
 
 /** Mobile **/
