--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
@@ -1,10 +1,8 @@
 <div class="main-body flex column">
     <h1>Pantheon</h1>
     <ul class="main-services flex row">
-        <a  routerLink="setter"><li class="main-setter" >Ventas</li></a>
-        <li class="main-catalogue">Catalogo</li>
-        <li class="main-reports">Reportes</li>
-        <li class="main-route">Ruta</li>
+        <a routerLink="setter" routerLinkActive="active-link"><li class="main-setter" >Ventas</li></a>
+        <a routerLink="inventory" routerLinkActive="active-link"><li class="main-catalogue">Catalogo</li></a>
     </ul>
     <div class="session-dashboard ">
         <h4>Actividad</h4>
