--- a/Pantheon/src/app/divisions/session/session.component.html
+++ b/Pantheon/src/app/divisions/session/session.component.html
@@ -1,4 +1,4 @@
-<main>
+<main class="session-container {{exampleParent}}">
     <app-sessionheader></app-sessionheader>
-    <app-mainsession></app-mainsession>
+    <router-outlet name="user-session"></router-outlet>
 </main>
