--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
@@ -1,9 +1,9 @@
-<div class="sessionheader" >
+<div class="sessionheader {{usersession}}" >
     <div class="header-container flex row material-shadow">
         <ul class="useravatarinfo grid">
             <li><img src="../../../../assets/useravatar.png" alt=""></li>
             <li>Nombre Apellido</li>
-            <li><span>Cargo</span></li>
+            <li><span>{{ usersession }}</span></li>
         </ul>
         <ul class="sessioncrumb flex row align-items-center">
             <li>01-01-2024 <br> 12:00:00</li>
