--- a/Pantheon/src/app/divisions/setter/main-setter/main-setter.component.html
+++ b/Pantheon/src/app/divisions/setter/main-setter/main-setter.component.html
@@ -1,6 +1,5 @@
-<main class="main-setter">
-    <app-sessionheader></app-sessionheader>
+<section class="main-setter main-body">
     <div class="setter-services">
         <p>setter works!</p>
     </div>
-</main>
+</section>
