--- a/Pantheon/src/app/app.component.html
+++ b/Pantheon/src/app/app.component.html
@@ -1,3 +1,3 @@
     <div class="appcontainer">
-        <router-outlet></router-outlet>
+        <router-outlet name="web"></router-outlet>
     </div>
