--- a/Pantheon/src/styles.less
+++ b/Pantheon/src/styles.less
@@ -21,13 +21,25 @@
 :root {
     --corner-radius: 4px;
     --mainbgcolor:whitesmoke;
+    --darkgray:darkgray;
     --mainpadding: 4px 12px;
+    --black: #1E1E1E;
+    --blue: blue;
+    --orange: orange;
 }
 
 
 
 /* Schemes */
-
+.black{
+    background-color: #1E1E1E ;
+}
+.blue {
+    background-color: blue;
+}
+.orange {
+    background-color: orange;
+}
 
 /* Basics */
 
@@ -120,6 +132,11 @@ button {
 .align-items-center {
     align-items: center;
 }
+
+.division {
+    background-color: var(--darkgray);
+}
+
 main {
     width: 100%;
     height: 100vh;
@@ -127,6 +144,10 @@ main {
     display: flex;
     flex-direction: column;
 }
-
+.main-body {
+    padding: 22px;
+    text-align: left;
+    height: 100%;
+}
 
 /** Mobile **/
