--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.html
@@ -1,4 +1,4 @@
-<div class="sessionheader {{usersession}}" >
+<div class="sessionheader {{ childExample }}" >
     <div class="header-container flex row material-shadow">
         <ul class="useravatarinfo grid">
             <li><img src="../../../../assets/useravatar.png" alt=""></li>
