Sunday morning fixes

--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.less
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.less
@@ -21,7 +21,7 @@ h1, h2, h3, h4 {
     cursor: pointer;
 }
 
-.main-services > li:not(:first-child) {
+.main-services > a:not(:first-child) {
     margin-left: 12px;
 }
 
