--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
@@ -4,12 +4,12 @@
         <a routerLink="setter" routerLinkActive="active-link"><li class="main-setter" >Ventas</li></a>
         <a routerLink="inventory" routerLinkActive="active-link"><li class="main-catalogue">Catalogo</li></a>
     </ul>
-    <div class="session-dashboard ">
+    <!-- <div class="session-dashboard ">
         <h4>Actividad</h4>
         <div class="plot"></div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab illum magnam ducimus mollitia minus ad dolorem rem voluptatum eius exercitationem in porro, facilis ipsa dolores, deserunt quibusdam iure aliquid maxime?</p>
-    </div>
-    <div class="session-recents">
+    </div> -->
+    <!-- <div class="session-recents">
         <h4>Recientes</h4>
         <div class="recent-sheet-container ">
             <ul class="recent-sheetlist">
@@ -29,5 +29,5 @@
                 <li></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 </div>
