--- a/Pantheon/src/app/divisions/session/session.component.html
+++ b/Pantheon/src/app/divisions/session/session.component.html
@@ -1,4 +1,4 @@
 <main class="session-container">
-    <app-sessionheader [childExample]="parentExample"></app-sessionheader>
-    <router-outlet name="user-session"></router-outlet>
+    <app-sessionheader></app-sessionheader>
+    <router-outlet name="user-session" ></router-outlet>
 </main>
