--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.less
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.less
@@ -1,4 +1,9 @@
-
+.sessionheader {
+    transition: 3s;
+    -webkit-transition: background-color 300ms ease-in;
+    -ms-transition: background-color 300ms ease-in;
+    transition: background-color 300ms ease-in;
+}
 
 .useravatarinfo {
     grid-template-columns: auto auto;
