--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.html
@@ -1,15 +1,18 @@
 <div class="main-body flex column">
     <h1>Pantheon</h1>
-    <ul class="main-services flex row">
+    <ul class="main-services flex row justify-content-spbt">
         <a routerLink="setter" routerLinkActive="active-link"><li class="main-setter" >Ventas</li></a>
         <a routerLink="inventory" routerLinkActive="active-link"><li class="main-catalogue">Catalogo</li></a>
+        <a routerLink="reports" routerLinkActive="active-link"><li class="main-reports">Reportes</li></a>
+        <a routerLink="codex" routerLinkActive="active-link"><li class="main-codex">Codificación</li></a>
+        <a routerLink="routes" routerLinkActive="active-link"><li class="main-route">Rutas</li></a>
     </ul>
-    <!-- <div class="session-dashboard ">
+    <div class="session-dashboard ">
         <h4>Actividad</h4>
         <div class="plot"></div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab illum magnam ducimus mollitia minus ad dolorem rem voluptatum eius exercitationem in porro, facilis ipsa dolores, deserunt quibusdam iure aliquid maxime?</p>
-    </div> -->
-    <!-- <div class="session-recents">
+    </div>
+    <div class="session-recents">
         <h4>Recientes</h4>
         <div class="recent-sheet-container ">
             <ul class="recent-sheetlist">
@@ -22,12 +25,8 @@
                 <li>Catalogo 7</li>
                 <li>Cotizacion 8</li>
                 <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+        
             </ul>
         </div>
-    </div> -->
+    </div>
 </div>
