--- a/Pantheon/src/app/divisions/session/mainsession/mainsession.component.less
+++ b/Pantheon/src/app/divisions/session/mainsession/mainsession.component.less
@@ -26,22 +26,26 @@ h1, h2, h3, h4 {
 }
 
 .main-setter {
-    background-color: blue;
+    background-color: var(--blue);
     color: white;
 }
 
 .main-catalogue {
-    background-color: orange;
+    background-color: var(--orange);
 }
 
 .main-reports {
-    background-color: green;
+    background-color: var(--green);
 }
 
 .main-route {
-    background-color: purple;
-    color: white;
+    background-color: var(--yellow);
 }
+
+.main-codex {
+    background-color: var(--lightblue);
+}
+
 .session-dashboard, .session-recents {
     width: 100%;
     background-color: rgb(239, 239, 239);
