--- a/Pantheon/src/app/divisions/setter/main-setter/main-setter.component.html
+++ b/Pantheon/src/app/divisions/setter/main-setter/main-setter.component.html
@@ -1,5 +1,16 @@
 <section class="main-setter main-body">
-    <div class="setter-services">
-        <p>setter works!</p>
+    <div class="setter-services module-services">
+        <div class="main-module-side">
+            <div class="module-crumb">
+                <h1>Cotizacion</h1>
+                <ul class="list-crumbs">
+                    
+                </ul>
+            </div>
+
+        </div>
+        <div class="module-sidebar">
+            <h4>Nuevo</h4>
+        </div>
     </div>
 </section>
