--- a/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.less
+++ b/Pantheon/src/app/divisions/session/sessionheader/sessionheader.component.less
@@ -11,7 +11,7 @@
     row-gap: 4px;
     padding: 10px 28px;
     background-color: white;
-    border-radius: 0px 4px 4px 0px;
+    border-radius: 0px var(--corner-radius) var(--corner-radius) 0px;
 }
 .useravatarinfo *:first-child {
     width: 55px;
@@ -44,7 +44,7 @@ span {
 .sessionburger, .sessionburger::after, .sessionburger::before {
     width: 36px;
     height: 4px;
-    border-radius: 4px;
+    border-radius: var(--corner-radius);
     background-color: azure;
     position: relative;
     cursor: pointer;
